style: fix grid overlapping buttons and balance hero height

--- a/src/pages/Films.css
+++ b/src/pages/Films.css
@@ -72,7 +72,7 @@
   position: relative;
   width: 100%;
   aspect-ratio: 16 / 9;
-  max-height: 85vh;
+  max-height: 75vh;
   margin-top: 6rem;
   overflow: hidden;
 }
@@ -191,7 +191,7 @@
 .showcase-row-section {
   position: relative;
   z-index: 10;
-  margin-top: -15vh;
+  margin-top: -8vh;
   padding-left: 4vw;
 }
 
